# darwin

./: README.md
allium/allium-materialize/: Cargo.toml  README.md  test.sql
allium/allium-materialize/src/: case.rs  error.rs  format.rs  lib.rs  uuid.rs
allium/allium-materialize/src/event_execute/: error.rs  mod.rs  node.rs
allium/allium-materialize/src/yaml/: error.rs  mod.rs  yaml.rs
allium/allium-starter/: Cargo.toml  Dockerfile  README.md
allium/allium-starter/src/: application.rs  cli.rs  main.rs
allium/allium-starter/src/application/: config.rs  error.rs
allium/allium-starter/src/cli/: bootstrap.rs  cleaner.rs  component.rs  error.rs  frontend.rs  kafka.rs  mix.rs  postgres.rs  utils.rs
calions/calions_rustler/native/calions_rustler/: Cargo.toml  README.md
calions/calions_rustler/native/calions_rustler/src/: atoms.rs  gdpr.rs  lib.rs  ulid.rs  uuid.rs
calions/data-stream-rs/: Cargo.toml
calions/data-stream-rs/src/: error.rs  lib.rs
calions/data-stream-rs/src/common/: mod.rs  topic_partition.rs
calions/data-stream-rs/src/consumer/: config.rs  consumer.rs  error.rs  event.rs  mod.rs  offsets.rs  pool.rs  stream.rs
calions/data-stream-rs/src/processor/: config.rs  error.rs  message.rs  mod.rs  processor.rs  sender.rs
calions/data-stream-rs/src/producer/: config.rs  error.rs  message.rs  mod.rs  producer.rs  sender.rs
calions/data-stream-rs/src/stream/: error.rs  input.rs  message.rs  mod.rs  offset.rs  output.rs  serde_derives.rs  stream.rs  time.rs
calions/data-stream-rs/src/stream/format/: data_stream_offset.rs  debezium.rs  mod.rs
calions/data-stream-tester-rs/: Cargo.toml  format.json
calions/data-stream-tester-rs/src/: main.rs  wizard.rs
calions/data-stream-tester-rs/src/applications/: app.rs
calions/data-stream-tester-rs/src/encoders/: activated_mapping.rs  mod.rs  raw_record.rs  reconciliation_data.rs  reconciliation_saga.rs
calions/data-stream-tester-rs/src/processors/: mod.rs
calions/data-stream-tester-rs/src/processors/activated_mapping/: activated_mapping.rs  mod.rs  msg.rs
calions/data-stream-tester-rs/src/producers/: activated_mapping.rs  mod.rs  raw_record.rs  reconciliation_data.rs  reconciliation_saga.rs
calions/data-stream-tester-rs/src/resources/: activated_mapping.rs  mod.rs  raw_record.rs  reconciliation_data.rs  reconciliation_saga.rs
calions/entities-reconciliations/: .gitignore  Cargo.toml  Readme.md
calions/entities-reconciliations/config/: default.toml  development.toml
calions/entities-reconciliations/src/: main.rs
calions/entities-reconciliations/src/applications/: app.rs  mod.rs  settings.rs
calions/entities-reconciliations/src/consumers/: entity_records.rs  mod.rs  reconciliation_command.rs
calions/entities-reconciliations/src/decoders/: entity_record.rs  mod.rs  reconciliation_command.rs
calions/entities-reconciliations/src/encoders/: mod.rs  record.rs  status.rs
calions/entities-reconciliations/src/producers/: mod.rs  reconciliations.rs
calions/entities-reconciliations/src/resources/: error.rs  mod.rs
calions/entities-reconciliations/tests/: TODO.md  create-topics.sh  local.toml  reset.sh  test.sh
calions/gdpr-rs/: Cargo.toml
calions/gdpr-rs/src/: error.rs  key.rs  lib.rs  salt.rs  serde.rs  value.rs
calions/importations/: .gitignore  Cargo.toml  Readme.md
calions/importations/config/: default.toml  development.toml
calions/importations/src/: main.rs
calions/importations/src/applications/: app.rs  settings.rs
calions/importations/src/consumers/: import_instances.rs  mod.rs
calions/importations/src/decoders/: import_instance.rs  mod.rs
calions/importations/src/encoders/: record.rs  status.rs
calions/importations/src/processors/: mod.rs
calions/importations/src/producers/: importations.rs  mod.rs
calions/importations/src/resources/: error.rs  mod.rs
calions/ingestions/: Cargo.toml  Readme.md
calions/ingestions/config/: default.toml  development.toml
calions/ingestions/src/: main.rs
calions/ingestions/src/applications/: app.rs  mod.rs  postgresql.rs  settings.rs
calions/ingestions/src/consumers/: activated_mappings.rs  anonymizations.rs  ingestion_data.rs  mod.rs  reconciliation_records.rs
calions/ingestions/src/decoders/: activated_mapping.rs  anonymization.rs  ingestion_data.rs  mod.rs  reconciliation_record.rs
calions/ingestions/src/encoders/: contact.rs  gdpr_key.rs  ingestion_data.rs  mod.rs
calions/ingestions/src/processors/: mod.rs
calions/ingestions/src/producers/: contacts.rs  gdpr_keys.rs  ingestion_data.rs  mod.rs
calions/ingestions/src/resources/: mod.rs
calions/ingestions/tests/: create-database.sh  init.sql  local.toml  reset-database.sh  reset.sh
calions/tesla/: Cargo.toml
calions/tesla/config/: default.toml  development.toml  local.toml  production.toml
calions/tesla/src/: main.rs
calions/tesla/src/applications/: mod.rs  settings.rs
calions/tesla/src/core/: errors.rs  mod.rs  tesla.rs
calions/tesla/src/core/storage/: manifest.rs  (+7 more)
calions/tesla/src/infra/: mod.rs
calions/tesla/src/tasks/: mod.rs
calions/tesla/src/web/: executor.rs  mod.rs
perso/remotes-rs/: Cargo.toml  README.md  run.sh
perso/remotes-rs/app/: Cargo.toml
perso/remotes-rs/app/examples/: index.html
perso/remotes-rs/app/src/: lib.rs  route.rs
perso/remotes-rs/config/: development.toml  local.toml
perso/remotes-rs/repository/: Cargo.toml
perso/remotes-rs/repository/src/: config.rs  error.rs  lib.rs  postgresql.rs  status.rs
perso/remotes-rs/resources/: Cargo.toml
perso/remotes-rs/resources/src/: error.rs  lib.rs
perso/remotes-rs/services/: Cargo.toml
perso/remotes-rs/services/src/: error.rs  lib.rs  mode.rs
perso/remotes-rs/src/: main.rs
perso/remotes-rs/src/applications/: config.rs  error.rs  mod.rs
perso/remotes-rs/styles/: package.json  tailwind.config.js
perso/remotes-rs/templates/web/: board.html  footer.html  header.html  layout.html  navbar.html
perso/remotes-rs/utils/: Cargo.toml
perso/remotes-rs/web/: Cargo.toml
perso/remotes-rs/web/src/: config.rs  cookie.rs  error.rs  lib.rs  router.rs  templates.rs
(+563 files in other folders)
