[package]
name = "allium-starter"
version = "0.1.36"
edition = "2021"
rust-version = "1.58"
authors = [
  "Rocky Signavong <rsignavong@gmail.com>",
  "Fabien Henon <henon.fabien@softcreations.fr>",
  "Charlie Eissen <ceissen@papayecube.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive", "env"] }
config = "0.12.0"
csv = "1.1.6"
derive-new = "0.5.9"
dotenv = "0.15.0"
heck = "0.4.0"
once_cell = "1.10.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
