[package]
name = "data_stream"
version = "0.8.5-alpha.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.4.4"
anyhow = "1.0.32"
async-executor = "0.1.2"
cfg-if = "0.1.10"
chrono = "0.4.19"
config = { version = "0.10.1", optional = true }
derivative = "2.1.1"
derive_builder = "0.9.0"
derive_more = "0.99.9"
derive-new = "0.5.8"
easy-parallel = "3.1.0"
event-listener = "2.3.3"
futures = "0.3.5"
log = "0.4.11"
once_cell = "1.5.2"
parking_lot = "0.11.0"
rdkafka = { version = "0.24.0", default-features = false, features = ["cmake-build"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
smol = "0.3.3"
thiserror = "1.0.20"
ulid = "0.4.0"
async-channel = "1.4.0"
rayon = "1.3.1"
tokio = { version = "0.2.22", default-features = false, features = ["rt-threaded"], optional = true }

[profile.release]
lto = true

[features]
default = []
tokio-processors = ["tokio"]
