[package]
name = "entities-reconciliations"
version = "0.1.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.4.4"
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = [ "serde" ] }
config = "0.10.1"
data_stream = { git = "ssh://git@gitlab.com/calions/data-stream-rs.git", tag = "v0.6.17" }
derivative = "2.1.1"
derive_more = "0.99.9"
derive-new = "0.5.8"
dotenv = "0.15.0"
env_logger = "0.7.1"
easy-parallel = "3.1.0"
itertools = "0.9.0"
log = "0.4.11"
once_cell = "1.5.2"
parking_lot = "0.11.1"
serde = { version = "1.0.115", features = [ "derive", "rc" ] }
serde_json = "1.0.57"
signal-hook = "0.1.16"
smol = "0.3.3"
thiserror = "1.0.20"
ulid = "0.4.0"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[profile.release]
lto = true

