[package]
name = "tesla"
version = "0.1.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-rt = "0.2.4"
actix-service = "0.4.1"
actix-web = "1.0.5"
bincode = "1.1.4"
bstr = "0.2.7"
config = "0.9.3"
dotenv = "0.14.1"
env_logger = "0.6.2"
failure = "0.1.5"
futures = "0.1.28"
itertools = "0.8.0"
lazy_static = "1.3.0"
listenfd = "0.3.3"
log = "0.4.8"
memmap = "0.7.0"
serde = { version = "1.0.98", features = [ "derive"] }
serde_json = "1.0.40"
ulid = "0.3.1"
rayon = "1.2.0"
