[package]
name = "remotes"
version = "0.1.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
config = "0.13.1"
dotenv = "0.15.0"
log = "0.4.16"
once_cell = "1.10.0"
repository = { path = "./repository" }
services = { path = "./services" }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
web = { path = "./web" }

[workspace]
members = ["app", "repository", "resources", "services", "utils", "web"]
