[package]
name = "repository"
version = "0.1.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
chrono = "0.4.19"
deadpool = "0.9.3"
deadpool-postgres = "0.10.2"
derive-new = "0.5.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
smol = "1.2.5"
thiserror = "1.0.30"
tokio-postgres = { version = "0.7.5", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-0_8",
] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
