[package]
name = "web"
version = "0.1.0"
authors = ["Rocky Signavong <rsignavong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.3"
derive-new = "0.5.9"
log = "0.4.16"
once_cell = "1.10.0"
resources = { path = "../resources", features = ["backend"] }
serde = { version = "1.0.136", features = ["derive"] }
services = { path = "../services" }
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["compression-br", "trace"] }
tracing = "0.1.34"

[profile.release]
lto = true
