[package]
name = "calions_rustler"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "calions_rustler"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
gdpr = { git = "ssh://git@gitlab.com/calions/gdpr-rs.git", tag = "v0.1.9" }
lazy_static = "1.4.0"
rayon = "1.3.1"
rustler = "0.21.1"
ulid = "0.4.0"
uuid = { version = "0.8.1", features = ["v4"] }
